fixed bug with header layout alignment

--- a/src/styles/Nav.module.css
+++ b/src/styles/Nav.module.css
@@ -154,7 +154,9 @@
   }
 
   #headerTextMain {
-    font-size: 4rem;
+    font-size: 3rem;
+    margin-top: -50px;
+
   }
 
   .aboutBoxes {
